--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "magichome-core",
-  "version": "0.0.1",
+  "version": "0.0.9",
   "description": "discover, control, and receive status for magichome devices",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
-    "test": "test"
+    "build": "tsc",
+    "test": "echo \"error: no tests\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -14,5 +19,21 @@
     "magichome"
   ],
   "author": "Zachary Avino",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "color-convert": "^2.0.1",
+    "dgram": "^1.0.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "promise-queue": "^2.2.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.17.15",
+    "@types/promise-queue": "^2.2.0",
+    "eslint": "^7.21.0",
+    "homebridge": "^1.3.1",
+    "nodemon": "^2.0.7",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.4.2"
+  }
 }
