--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "magichome-core",
-  "version": "0.0.13",
+  "version": "0.0.19",
   "description": "discover, control, and receive status for magichome devices",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "echo \"error: no tests\" && exit 1"
+    "test": "echo \"error: no tests\" && exit 1",
+    "watch": "npm run build && npm link && nodemon || exit 1"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,8 @@
     "dgram": "^1.0.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "promise-queue": "^2.2.5"
+    "promise-queue": "^2.2.5",
+    "queue-promise": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^14.17.15",
