--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "echo \"error: no tests\" && exit 1",
     "watch": "npm run build && npm link && nodemon || exit 1"
   },
   "repository": {
@@ -26,15 +25,14 @@
     "dgram": "^1.0.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
-    "promise-queue": "^2.2.5",
-    "queue-promise": "^2.2.1"
+    "@types/node": "^12.0.12",
+    "ts-node": "^8.3.0"
   },
   "devDependencies": {
     "@types/node": "^14.17.15",
-    "@types/promise-queue": "^2.2.0",
     "eslint": "^7.21.0",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.4"
   }
 }
