--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,17 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es2015",
+    "esModuleInterop": true,
+    "downlevelIteration": true,
+    "sourceMap": true,
+    "target": "es5",
+    "lib": [
+      "es5", "es6", "dom", "dom.iterable"
+    ],
     "declaration": true,
     "outDir": "./dist"
   },
   "include": [
-    "src/**/*"
+    "src/**/*",
   ]
 }
