--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dgram": "^1.0.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "promise-queue": "^2.2.5",
     "ts-node": "^8.3.0"
   },
   "devDependencies": {
