--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test2": "ts-mocha src/tests/*.test.ts -w --watch-extensions ts",
     "test:watch": "ts-mocha --watch-extensions ts --watch --watch-files src 'src/tests/*.test.ts'",
-    "test": "nodemon ./test/async.js",
     "watch": "npm run build && npm link && nodemon || exit 1"
   },
   "repository": {
@@ -35,6 +33,7 @@
     "@types/mocha": "^9.0.0",
     "@types/node": "^14.17.33",
     "eslint": "^7.21.0",
+    "mocha": "^9.1.3",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-mocha": "^8.0.0",
