--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "dgram": "^1.0.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "p-queue": "^7.2.0",
     "promise-queue": "^2.2.5",
+    "queue-promise": "^2.2.1",
     "ts-node": "^8.3.0"
   },
   "devDependencies": {
