--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "promise-queue": "^2.2.5",
-    "ts-node": "^8.3.0"
+    "ts-node": "^8.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/mocha": "^9.0.0",
