--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/mocha": "^9.0.0",
+    "@types/expect": "^24.3.0",
+    "@types/mocha": "^9.1.1",
     "@types/node": "^14.17.33",
     "eslint": "^7.21.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-mocha": "^8.0.0",
