--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "downlevelIteration": true,
     "sourceMap": true,
     "target": "es5",
+    "alwaysStrict": true,
     "lib": [
       "es2020", "es6", "dom", "dom.iterable"
     ],
