--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test:watch": "ts-mocha --timeout 10000 --watch-extensions ts --watch --watch-files src 'src/specs/*.spec.ts'",
+    "test:watch": "nodemon --watch src \"src/specs/*.spec.ts\"",
     "watch": "npm run build && npm link && nodemon || exit 1"
   },
   "repository": {
@@ -33,7 +33,7 @@
     "@types/node": "^14.17.33",
     "eslint": "^7.21.0",
     "mocha": "^10.0.0",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.4.4"
