--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
   "author": "Zachary Avino",
   "license": "MIT",
   "dependencies": {
-    "dgram": "^1.0.1",
-    "promise-queue": "^2.2.5",
-    "ts-node": "^8.3.0",
-    "uuid": "^8.3.2"
+    "ts-node": "^8.3.0"
   },
   "devDependencies": {
     "@types/expect": "^24.3.0",
