--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test:watch": "nodemon --watch src \"src/specs/*.spec.ts\"",
-    "watch": "npm run build && npm link && nodemon || exit 1"
+    "test:watch": "nodemon --config nodemon.test.json --watch src \"src/specs/*.spec.ts\"",
+    "build:watch": "nodemon --config nodemon.build.json"
   },
   "repository": {
     "type": "git",
@@ -21,11 +21,7 @@
   ],
   "author": "Zachary Avino",
   "license": "MIT",
-  "dependencies": {
-    "ts-node": "^8.3.0"
-  },
   "devDependencies": {
-    "@types/expect": "^24.3.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "^14.17.33",
     "eslint": "^7.21.0",
@@ -33,6 +29,7 @@
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
     "ts-mocha": "^10.0.0",
+    "ts-node": "^10.2.1",
     "typescript": "^4.4.4"
   }
 }
