prevent crash if protoDevices not present

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "magichome-core",
-  "version": "0.0.19",
-  "description": "discover, control, and receive status for magichome devices",
+  "version": "0.0.21",
+  "description": "discover, control, and receive status for MagicHome devices",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "fix me"
+    "url": "https://github.com/Zacknetic/MagicHome-Core"
   },
   "keywords": [
     "magichome"
@@ -26,7 +26,7 @@
     "@types/node": "^14.17.33",
     "eslint": "^7.21.0",
     "mocha": "^10.0.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.1",
     "rimraf": "^3.0.2",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.2.1",
