--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "async-mutex": "^0.5.0"
   }
 }
