--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsc",
     "test:watch": "nodemon --config nodemon.test.json --watch src \"src/specs/*.spec.ts\"",
-    "build:watch": "nodemon --config nodemon.build.json"
+    "build:watch": "nodemon --config nodemon.build.json",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "rimraf": "^3.0.2",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.2.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.4.4"
   },
   "dependencies": {
