--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,11 @@
 {
   "compilerOptions": {
+    "target": "ES2021",
+    "lib": ["ES2021", "DOM"],
     "module": "commonjs",
+    "strict": true,
     "esModuleInterop": true,
-    "downlevelIteration": true,
-    "sourceMap": true,
-    "target": "es5",
-    "alwaysStrict": true,
-    "lib": [
-      "es2020", "es6", "dom", "dom.iterable"
-    ],
-    "declaration": true,
-    "outDir": "./dist"
-  },
-  "include": [
-    "src/**/*"
-  ]
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  }
 }
