--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "clean": "rimraf ./dist",
-    "test:watch": "nodemon --config nodemon.test.json --watch src \"src/specs/*.spec.ts\"",
+    "test:watch": "nodemon --config nodemon.test.json --watch src \"specs/*.spec.ts\"",
     "build:watch": "nodemon --config nodemon.build.json",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
